--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ceep">
+        android:theme="@style/Theme.Ceep"
+        android:usesCleartextTraffic="true"> <!-- Atributo fortemente desaconselhado. Usado somente para fins de testes. -->
         <activity
             android:name=".ui.activity.FormNotaActivity"
             android:exported="false" />
